# NLP807

./: .gitignore  README.md  pyproject.toml
align_mid/: 001.mid  002.mid  003.mid  004.mid  005.mid  006.mid  007.mid  008.mid  009.mid  010.mid  011.mid  012.mid  013.mid  014.mid  015.mid  016.mid  017.mid  018.mid  019.mid  020.mid  021.mid  022.mid  023.mid  024.mid  025.mid  026.mid  027.mid  028.mid  029.mid  030.mid  031.mid  032.mid  033.mid  034.mid  035.mid  036.mid  037.mid  038.mid  039.mid  040.mid  (+856 more)
notebooks/: results.ipynb
scripts/: run_all_probes.sh  run_seed_full.sh
src/data/: alignments.py  dataset.py  extract_f0.py  generate_examples.py  librispeech.py  midi_ops.py  prepare_esc50.py  prepare_speech_commands.py  prepare_voxceleb.py  render_pop909.py  speech_commands.py  voxceleb.py
src/eval/: probe.py  train_boundary_probe.py  train_f0_probe.py  train_ks_probe.py  train_probe.py  train_sid_probe.py
src/models/: encoder.py  msm.py
src/pretrain/: train.py
